@@ -30,7 +30,7 @@
 adventure		crc.o data.o done.o init.o io.o main.o save.o subr.o \
 	vocab.o wizard.o
 adventure/setup		setup.o
-arithmetic		arithmetic.o
+arithmetic		arithmetic.o lib/getprogname.o
 atc			extern.o grammar.o graphics.o input.o lex.o list.o \
 	log.o main.o tunable.o update.o
 backgammon/backgammon/backgammon	extra.o main.o move.o text.o \
@@ -64,7 +64,7 @@ dab			algor.o board.o box.o gamescreen.o human.o main.o \
 dm			dm.o lib/getloadavg.o
 factor			factor.o primes/pr_tbl.o
 fish			fish.o
-fortune/fortune/fortune	fortune.o
+fortune/fortune/fortune	fortune.o lib/getprogname.o
 fortune/strfile/strfile	strfile.o
 fortune/unstr/unstr	unstr.o
 gomoku			bdinit.o bdisp.o main.o makemove.o pickmove.o stoc.o
